--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
     <groupId>one.clumsy</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
 
         <!-- tests -->
